# smallslib

./: CMakeLists.txt  README.md
src/: private.c  private.h  smallslib.c
